src/snapshots/prql__parser__test__parse_pipeline.snap
---
source: src/parser.rs
assertion_line: 324
expression: "parse(parse_to_pest_tree(r#\"\nfrom employees\nfilter country = \"USA\"                           # Each line transforms the previous result.\nderive [                                         # This adds columns / variables.\n  gross_salary: salary + payroll_tax,\n  gross_cost:   gross_salary + benefits_cost     # Variables can use other variables.\n]\nfilter gross_cost > 0\naggregate by:[title, country] [                  # `by` are the columns to group by.\n    average salary,                              # These are aggregation calcs run on each group.\n    sum     salary,\n    average gross_salary,\n    sum     gross_salary,\n    average gross_cost,\n    sum_gross_cost: sum gross_cost,\n    count: count,\n]\nsort sum_gross_cost\nfilter count > 200\ntake 20\n    \"#.trim(),\n                Rule::pipeline).unwrap()).unwrap()"

---
- Pipeline:
    - From:
        - Ident: employees
    - Filter:
        - Ident: country
        - Raw: "="
        - String: USA
    - Derive:
        - lvalue: gross_salary
          rvalue:
            Items:
              - Ident: salary
              - Raw: +
              - Ident: payroll_tax
        - lvalue: gross_cost
          rvalue:
            Items:
              - Ident: gross_salary
              - Raw: +
              - Ident: benefits_cost
    - Filter:
        - Ident: gross_cost
        - Raw: ">"
        - Raw: "0"
    - Aggregate:
        by:
          - Ident: title
          - Ident: country
        calcs:
          - Custom:
              name: average
              args:
                - Ident: salary
              named_args: []
          - Custom:
              name: sum
              args:
                - Ident: salary
              named_args: []
          - Custom:
              name: average
              args:
                - Ident: gross_salary
              named_args: []
          - Custom:
              name: sum
              args:
                - Ident: gross_salary
              named_args: []
          - Custom:
              name: average
              args:
                - Ident: gross_cost
              named_args: []
        assigns:
          - lvalue: sum_gross_cost
            rvalue:
              Transformation:
                Custom:
                  name: sum
                  args:
                    - Ident: gross_cost
                  named_args: []
          - lvalue: count
            rvalue:
              Transformation:
                Custom:
                  name: count
                  args: []
                  named_args: []
    - Sort:
        - Ident: sum_gross_cost
    - Filter:
        - Ident: count
        - Raw: ">"
        - Raw: "200"
    - Take: 20

